# adas-infra

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: benchmarks.yml  ci.yml  e2e-local-mock.yml  integration.yml
conf/: .env.example  config.yaml
conf/data/: multimodal_iris.yaml  synthetic_local.yaml
conf/manifest/: sqlite.yaml
conf/model/: fusion_baseline.yaml
conf/observability/: prometheus.yaml
conf/profile/: cloud_prod.yaml  local_mock.yaml
conf/ray/: cluster_autoscale.yaml  local_2worker.yaml
conf/registry/: mlflow_local.yaml
conf/serve/: local_fastapi.yaml
conf/storage/: azure_blob.yaml  local_nvme.yaml
conf/trainer/: ddp_h100.yaml  single_node_debug.yaml
docker/: serve.Dockerfile  train.Dockerfile
docker/local-obs/: prometheus.yml
docker/local-obs/grafana/: dashboards.yml  datasources.yml
docs/: architecture.md
docs/adr/: 0001-contract-layer-protocol-vs-abc.md  0002-plasma-cross-process-requirement.md  0003-delta-strategy.md  0005-schema-evolution.md
scripts/: bootstrap_dev.sh  judge_quickstart.sh  seed_delta_log.py
tests/: conftest.py
tests/benchmarks/: test_plasma_throughput.py
tests/e2e/: sample.json  test_local_mock_pipeline.py
tests/integration/: test_delta_merge_e2e.py  test_ray_plasma_roundtrip.py
tests/unit/core/: test_schemas.py
tests/unit/data/: test_delta_log.py  test_synthetic_ingestor.py  test_torch_dataset.py
tests/unit/train/: test_models.py
